WexGit/Wex_DX/force-app/main/default/objects/CommHomePageSettings__c/CommHomePageSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CommHomePageSettings</label>
</CustomObject>