WexGit/Wex_DX/force-app/main/default/objects/CommHomePageSettings__c/fields/Common_Reports_Width__c.field-meta.xml
<CustomField>
    <fullName>Common_Reports_Width__c</fullName>
    <description>Width number in percentage for the Common Reports component for community homepage.</description>
    <label>Common Reports Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>