WexGit/Wex_DX/force-app/main/default/objects/CommHomePageSettings__c/fields/Top_Opportunities_Height__c.field-meta.xml
<CustomField>
    <fullName>Top_Opportunities_Height__c</fullName>
    <description>Height number in pixels for the Common Reports component for community homepage.</description>
    <label>Top Opportunities Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>