WexGit/Wex_DX/force-app/main/default/objects/CommHomePageSettings__c/fields/Top_Opportunities_Title__c.field-meta.xml
<CustomField>
    <fullName>Top_Opportunities_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Top Opportunities Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>