WexGit/Wex_DX/force-app/main/default/objects/CommHomePageSettings__c/fields/Top_Opportunities_Width__c.field-meta.xml
<CustomField>
    <fullName>Top_Opportunities_Width__c</fullName>
    <description>Width number in percent for the Top Opportunities component for community homepage.</description>
    <label>Top Opportunities Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>